--- a/src/main/java/Interfaz/Menu.form
+++ b/src/main/java/Interfaz/Menu.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[500, 500]"/>
+      <Dimension value="[500, 550]"/>
     </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -33,7 +33,7 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="tituloVeterinaria" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="nuevoCliente" min="-2" pref="204" max="-2" attributes="0"/>
+                          <Component id="btnNuevoCliente" min="-2" pref="204" max="-2" attributes="0"/>
                           <Component id="agendarCita" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
                           <Component id="verClientes" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
                       </Group>
@@ -41,6 +41,7 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="reporteCliente" min="-2" pref="204" max="-2" attributes="0"/>
                           <Component id="reporteCitas" min="-2" pref="204" max="-2" attributes="0"/>
                           <Component id="reportePagos" min="-2" pref="204" max="-2" attributes="0"/>
                       </Group>
@@ -56,7 +57,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="tituloVeterinaria" min="-2" pref="39" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="nuevoCliente" min="-2" pref="64" max="-2" attributes="0"/>
+              <Component id="btnNuevoCliente" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="verClientes" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -65,7 +66,9 @@
               <Component id="reportePagos" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="reporteCitas" min="-2" pref="64" max="-2" attributes="0"/>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="reporteCliente" min="-2" pref="64" max="-2" attributes="0"/>
+              <EmptySpace pref="51" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -80,7 +83,7 @@
         <Property name="text" type="java.lang.String" value="Veterinaria UES"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="nuevoCliente">
+    <Component class="javax.swing.JToggleButton" name="btnNuevoCliente">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
@@ -121,6 +124,14 @@
           <Font name="Segoe UI" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Reporte de citas"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="reporteCliente">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="18" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Reporte de cliente"/>
       </Properties>
     </Component>
   </SubComponents>
