--- a/src/main/java/Interfaz/Menu.form
+++ b/src/main/java/Interfaz/Menu.form
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Container class="javax.swing.JFrame" name="jFrame1">
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+    </Container>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -33,17 +50,21 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="tituloVeterinaria" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="btnNuevoCliente" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="agendarCita" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="verClientes" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="btnNuevoCliente" min="-2" pref="204" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="btnAgendarCita" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
+                          <Component id="btnVerClientes" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="15" pref="160" max="32767" attributes="0"/>
+                      <EmptySpace min="15" pref="106" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="reporteCliente" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="reporteCitas" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="reportePagos" min="-2" pref="204" max="-2" attributes="0"/>
+                          <Component id="btnReporteCliente" min="-2" pref="204" max="-2" attributes="0"/>
+                          <Component id="btnReporteCitas" min="-2" pref="204" max="-2" attributes="0"/>
+                          <Component id="btnReportePagos" min="-2" pref="204" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -57,18 +78,21 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="tituloVeterinaria" min="-2" pref="39" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnNuevoCliente" min="-2" pref="64" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="btnNuevoCliente" min="-2" pref="64" max="-2" attributes="0"/>
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="verClientes" min="-2" pref="64" max="-2" attributes="0"/>
+              <Component id="btnVerClientes" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="agendarCita" min="-2" pref="64" max="-2" attributes="0"/>
+              <Component id="btnAgendarCita" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="reportePagos" min="-2" pref="64" max="-2" attributes="0"/>
+              <Component id="btnReportePagos" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="reporteCitas" min="-2" pref="64" max="-2" attributes="0"/>
+              <Component id="btnReporteCitas" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="reporteCliente" min="-2" pref="64" max="-2" attributes="0"/>
-              <EmptySpace pref="51" max="32767" attributes="0"/>
+              <Component id="btnReporteCliente" min="-2" pref="64" max="-2" attributes="0"/>
+              <EmptySpace pref="73" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -94,7 +118,7 @@
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="nuevoCliente"/>
       </AccessibilityProperties>
     </Component>
-    <Component class="javax.swing.JButton" name="verClientes">
+    <Component class="javax.swing.JButton" name="btnVerClientes">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
@@ -102,7 +126,7 @@
         <Property name="text" type="java.lang.String" value="Ver Clientes"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="agendarCita">
+    <Component class="javax.swing.JButton" name="btnAgendarCita">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
@@ -110,7 +134,7 @@
         <Property name="text" type="java.lang.String" value="Agendar Cita"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="reportePagos">
+    <Component class="javax.swing.JButton" name="btnReportePagos">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
@@ -118,7 +142,7 @@
         <Property name="text" type="java.lang.String" value="Reporte de pagos"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="reporteCitas">
+    <Component class="javax.swing.JButton" name="btnReporteCitas">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
@@ -126,12 +150,17 @@
         <Property name="text" type="java.lang.String" value="Reporte de citas"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="reporteCliente">
+    <Component class="javax.swing.JButton" name="btnReporteCliente">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Reporte de cliente"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Prueba"/>
       </Properties>
     </Component>
   </SubComponents>
