--- a/src/main/java/Interfaz/NuevoCliente.form
+++ b/src/main/java/Interfaz/NuevoCliente.form
@@ -26,15 +26,19 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="lblCorreo" max="32767" attributes="0"/>
                   <Component id="lblDui" max="32767" attributes="0"/>
-                  <Component id="lblNombre" pref="68" max="32767" attributes="0"/>
+                  <Component id="lblNombre" max="32767" attributes="0"/>
+                  <Component id="lblTelefono" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="txtNombre" max="32767" attributes="0"/>
-                  <Component id="txtDui" pref="351" max="32767" attributes="0"/>
+                  <Component id="txtDui" max="32767" attributes="0"/>
+                  <Component id="txtTelefono" max="32767" attributes="0"/>
+                  <Component id="txtCorreo" pref="351" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="196" max="32767" attributes="0"/>
+              <EmptySpace pref="166" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -51,7 +55,17 @@
                   <Component id="lblDui" min="-2" max="-2" attributes="0"/>
                   <Component id="txtDui" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="446" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblTelefono" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtTelefono" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblCorreo" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtCorreo" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="384" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,6 +84,20 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtDui">
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblTelefono">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Telefono"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtTelefono">
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblCorreo">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Correo Electronico"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtCorreo">
     </Component>
   </SubComponents>
 </Form>
